objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Content Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Movies &amp; TV</fullName>
                </value>
                <value>
                    <fullName>Nightlife</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Museums &amp; Attractions</fullName>
                </value>
                <value>
                    <fullName>Activities &amp; Competitions</fullName>
                </value>
                <value>
                    <fullName>Tours &amp; Cruises</fullName>
                </value>
                <value>
                    <fullName>Circus &amp; Magic</fullName>
                </value>
                <value>
                    <fullName>Foodie</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Lectures &amp; Classes</fullName>
                </value>
                <value>
                    <fullName>Shopping &amp; Spa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_End__c</fullName>
        <label>Run End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Start__c</fullName>
        <label>Run Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seasonal_Category__c</fullName>
        <label>Seasonal Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>New Years</fullName>
                </value>
                <value>
                    <fullName>Halloween</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territories__c</fullName>
        <label>Territories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticketing_System__c</fullName>
        <label>Ticketing System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ticketing System A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>Unqualified Reason</description>
        <inlineHelpText>Select Unqualified Reason</inlineHelpText>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Doesn’t want to discount</fullName>
                </value>
                <value>
                    <fullName>Wants member info</fullName>
                </value>
                <value>
                    <fullName>Event is sold out</fullName>
                </value>
                <value>
                    <fullName>Doesn’t want multiple discount channels</fullName>
                </value>
                <value>
                    <fullName>Too small of capacity</fullName>
                </value>
                <value>
                    <fullName>Too late to partner</fullName>
                </value>
                <value>
                    <fullName>Budget already used</fullName>
                </value>
                <value>
                    <fullName>Exclusive with ticketing site</fullName>
                </value>
                <value>
                    <fullName>Fundraiser, can’t do commission split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_Size__c</fullName>
        <label>Venue Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under 100</fullName>
                </value>
                <value>
                    <fullName>100 - 499</fullName>
                </value>
                <value>
                    <fullName>500 -1000</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>Biz_Dev_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Biz Dev Queue</label>
        <queue>Biz_Dev_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cold_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>Territories__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Cold</value>
        </filters>
        <label>Cold Leads</label>
    </listViews>
    <listViews>
        <fullName>Hot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>Territories__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews>
    <listViews>
        <fullName>Warm_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.RATING</columns>
        <columns>Territories__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Warm</value>
        </filters>
        <label>Warm Leads</label>
    </listViews>
    <validationRules>
        <fullName>Require_Unqualified_Reason</fullName>
        <active>true</active>
        <description>If Lead Status is Unqualified, require an Unqualified Reason</description>
        <errorConditionFormula>ISPICKVAL(Status, "Unqualified") &amp;&amp; ISBLANK(TEXT(Unqualified_Reason__c))</errorConditionFormula>
        <errorMessage>Please select and unqualified reason.</errorMessage>
    </validationRules>
</CustomObject>